# IM

./: .gitignore  CMakeLists.txt  EventLoop.hpp  IMClientConsole.sln  README.md  UML.mdj  main.cpp
IMClientConsole/: ConsoleUI.hpp  FileTransfer.hpp  FileUtils.hpp  IMClientConsole.vcxproj  IMClientConsole.vcxproj.filters  Message.hpp  NetworkClient.hpp  Pack.hpp  Socket.hpp  StreamTransfer.hpp  main.cpp
net/: Connection.hpp  ConnectionMgr.hpp  Epoll.hpp  EventLoop.hpp  FileTransfer.hpp  FileUtils.hpp  Pack.hpp  Socket.hpp
net/Transfer/: FileTransfer.hpp
server/: MQ.hpp  Message.hpp  MsgHandler.hpp
sql/: MySQLClient.hpp
tests/: CMakeLists.txt
tests/main/: ConnectionMgr.cpp  MQ.cpp  epoll.cpp  eventloopclient.cpp  eventloopserver.cpp  file.cpp  filetranscli.cpp  message.cpp  msghandlercilent.cpp  msghandlerserver.cpp  mysql.cpp  pack.cpp  packSock.cpp  socket.cpp  treadpool.cpp
utils/: ThreadPool.hpp
